Bug 876823 - Fire DOMRequest.onerror event when Bluetooth*Manager.Connect() fails. r=gyeh, a=leo+