dom/bluetooth/BluetoothProfileManagerBase.h
@@ -7,6 +7,10 @@
 #ifndef mozilla_dom_bluetooth_bluetoothprofilemanagerbase_h__
 #define mozilla_dom_bluetooth_bluetoothprofilemanagerbase_h__
 
+#define ERR_SERVICE_CHANNEL_NOT_FOUND "DeviceChannelRetrievalError"
+#define ERR_REACHED_CONNECTION_LIMIT "ReachedConnectionLimitError"
+#define ERR_NO_AVAILABLE_RESOURCE "NoAvailableResourceError"
+
 #include "BluetoothCommon.h"
 
 BEGIN_BLUETOOTH_NAMESPACE
